z-index triple fix

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ p {
     height: 500px;
     margin-top: 40px;
     float: left;
-    z-index: 5;
+    z-index: 2;
     top: -20px;
 }
 
